migrate backend to production PostgreSQL and add multi-cloud infrastructure